--- a/pom.xml
+++ b/pom.xml
@@ -498,7 +498,7 @@
             <dependency>
                 <groupId>org.motechproject.mforms</groupId>
                 <artifactId>xforms-server</artifactId>
-                <version>1.0-M6-beta-2</version>
+                <version>0.7.0-beta-1</version>
             </dependency>
             <dependency>
                 <groupId>com.jcraft</groupId>
