Solved issue #612 on setting up db upgrade on motech mobile.This supposed to fix the expected break on the continuum

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -4,7 +4,7 @@
 ##HSQL
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.show_sql=false
-hibernate.hbm2ddl.auto=create
+
 
 
 ##HSQL JDBC
@@ -37,8 +37,8 @@ jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
 
 
 ##Liquibase Settings
-#changeLogFile=/WEB-INF/master-motech-change-log.xml
-#contexts=production
+changeLogFile=classpath:motech-web-main-change-log.xml
+contexts=production
 
 
 ##Rancard Gateway
