changing jdbc url in hsql.jdbc.properties and motech-serttings.properties to force the creation of new database for each built to avoid table already exist errors

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -11,7 +11,7 @@ hibernate.show_sql=false
 jdbc.driverClassName=org.hsqldb.jdbcDriver
 jdbc.username=sa
 jdbc.password=
-jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
+jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
 
 ##Derby
 #hibernate.dialect=org.hibernate.dialect.DerbyDialect
