--- a/motech-mobile-core/src/test/resources/hsql.jdbc.properties
+++ b/motech-mobile-core/src/test/resources/hsql.jdbc.properties
@@ -3,4 +3,4 @@
 jdbc.driverClassName=org.hsqldb.jdbcDriver
 jdbc.username=sa
 jdbc.password=
-jdbc.url=jdbc:hsqldb:file:motechmobiledb;shutdown=true
+jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
