refs #744 Added functionality to make message processing (preparing, sending, updating) atomic per message instead of over all messages.
Testing functionality to generate sporadic runtime errors while sending messages.

--- a/motech-mobile-webapp/src/test/resources/log4j.properties
+++ b/motech-mobile-webapp/src/test/resources/log4j.properties
@@ -24,3 +24,5 @@ log4j.debug=false
 log4j.category.org.acegisecurity=ERROR
 log4j.category.org.springframework=ERROR
 log4j.category.org.hibernate=ERROR
+
+log4j.logger.org.motechproject.mobile.omi.service=INFO
