--- a/motech-mobile-omi/pom.xml
+++ b/motech-mobile-omi/pom.xml
@@ -19,8 +19,10 @@
         <dependency>
             <groupId>org.motechproject.mobile</groupId>
             <artifactId>motech-mobile-omp</artifactId>
-            <version>0.7.4-SNAPSHOT</version>
-            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.motechproject.mobile</groupId>
+            <artifactId>motech-mobile-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.motechproject</groupId>
