--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -33,11 +33,12 @@ jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
 #jdbc.username=motechmobile
 #jdbc.password=mmobilepass
 #jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
-
+#
 
 ##Liquibase Settings
+##context can be *setup or *update or leave empty for fresh deployment for now
 changeLogFile=classpath:motech-web-main-change-log.xml
-contexts=production
+contexts=setup
 
 
 ##Rancard Gateway
