committing liquibase workaround.downgrading cvs file to have 0.7.0 data to enable upgrade via liquibase.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -38,7 +38,7 @@ jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
 ##Liquibase Settings
 ##context can be *setup or *update or leave empty for fresh deployment for now
 changeLogFile=classpath:motech-web-main-change-log.xml
-contexts=setup
+contexts=setup,update,hsql
 
 
 ##Rancard Gateway
