--- a/motech-mobile-omp/src/test/resources/ivrcallstatsprovidertest.properties
+++ b/motech-mobile-omp/src/test/resources/ivrcallstatsprovidertest.properties
@@ -7,5 +7,5 @@ jdbc.url=jdbc:hsqldb:mem:ivrdao
 
 #Hibernate
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.hbm2ddl.auto=create
