Moved connection pool configuration to motech.settings

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -34,6 +34,13 @@ jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
 #jdbc.password=mmobilepass
 #jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
 
+##Connection
+hibernate.c3p0.max_size=15
+hibernate.c3p0.min_size=5
+hibernate.c3p0.timeout=180
+hibernate.c3p0.max_statements=20
+hibernate.c3p0.idle_test_period=300
+hibernate.c3p0.acquire_increment=3
 
 ##Liquibase Settings
 ##context can be *setup or *update or leave empty for fresh deployment for now
