o  Included C3P0 deps in motech-mobile parent and motech-mobile-core pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -412,6 +412,11 @@
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-c3p0</artifactId>
+                <version>3.3.2.GA</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
                 <version>3.3.2.GA</version>
                 <exclusions>
