--- a/motech-mobile-omp/pom.xml
+++ b/motech-mobile-omp/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.motechproject.mobile</groupId>
-    <artifactId>motech-mobile-omp</artifactId>
+    <artifactId>tama-mobile-omp</artifactId>
     <packaging>jar</packaging>
     <version>0.1-SNAPSHOT</version>
-    <name>MoTeCH Mobile OMP</name>
+    <name>TAMA Mobile OMP</name>
     <url>https://motech.rcg.usm.maine.edu/redmine</url>
     <parent>
         <groupId>org.motechproject</groupId>
-        <artifactId>motech-mobile</artifactId>
+        <artifactId>tama-mobile</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
     <build>
@@ -99,7 +99,7 @@
         </dependency>
         <dependency>
             <groupId>org.motechproject.mobile</groupId>
-            <artifactId>motech-mobile-core</artifactId>
+            <artifactId>tama-mobile-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
