--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.motechproject.mobile</groupId>
-    <artifactId>motech-mobile-webapp</artifactId>
+    <artifactId>tama-mobile-webapp</artifactId>
     <packaging>war</packaging>
     <version>0.1-SNAPSHOT</version>
-    <name>MoTeCH Mobile WebApp</name>
+    <name>TAMA Mobile WebApp</name>
     <url>http://maven.apache.org</url>
     <parent>
         <groupId>org.motechproject</groupId>
-        <artifactId>motech-mobile</artifactId>
+        <artifactId>tama-mobile</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
     <dependencies>
@@ -64,23 +64,23 @@
         </dependency>
         <dependency>
           <groupId>org.motechproject.mobile</groupId>
-          <artifactId>motech-mobile-core</artifactId>
+          <artifactId>tama-mobile-core</artifactId>
         </dependency>
         <dependency>
           <groupId>org.motechproject.mobile</groupId>
-          <artifactId>motech-mobile-omp</artifactId>
+          <artifactId>tama-mobile-omp</artifactId>
         </dependency>
         <dependency>
           <groupId>org.motechproject.mobile</groupId>
-          <artifactId>motech-mobile-omi</artifactId>
+          <artifactId>tama-mobile-omi</artifactId>
         </dependency>
         <dependency>
           <groupId>org.motechproject.mobile</groupId>
-          <artifactId>motech-mobile-imp</artifactId>
+          <artifactId>tama-mobile-imp</artifactId>
         </dependency>
         <dependency>
         	<groupId>org.motechproject.mobile</groupId>
-        	<artifactId>motech-mobile-modemgw</artifactId>
+        	<artifactId>tama-mobile-modemgw</artifactId>
         </dependency>
         <dependency>
             <groupId>org.motechproject</groupId>
@@ -179,7 +179,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>motech-mobile-webapp</finalName>
+        <finalName>tama-mobile-webapp</finalName>
         <testResources>
             <testResource>
                 <directory>src/test/resources</directory>
