--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -42,7 +42,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=${catalina.base}/logs/motech-mobile.log
+log4j.appender.logfile.File=${catalina.base}/logs/tama-mobile.log
 log4j.appender.logfile.DatePattern='.'yyyy-MM-dd
 
 # Pattern to output: date priority [thread] [category] - message
@@ -71,7 +71,7 @@ log4j.logger.org.motechproject.mobile.imp.serivce.IMPServiceImpl=WARN
 log4j.logger.org.motechproject.mobile.omp.manager.rancard.RancardGatewayManagerImpl=DEBUG, rancardlog
 log4j.additivity.org.motechproject.mobile.omp.manager.rancard.RancardGatewayManagerImpl=false
 log4j.appender.rancardlog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.rancardlog.File=${catalina.base}/logs/rancard.log
+log4j.appender.rancardlog.File=${catalina.base}/logs/tama-rancard.log
 log4j.appender.rancardlog.DatePattern='.'yyyy-MM-dd
 log4j.appender.rancardlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.rancardlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
@@ -80,7 +80,7 @@ log4j.appender.rancardlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=INFO, ivrreportlog
 log4j.additivity.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.reportlog=false
 log4j.appender.ivrreportlog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ivrreportlog.File=${catalina.base}/logs/ivrreports.log
+log4j.appender.ivrreportlog.File=${catalina.base}/logs/tama-ivrreports.log
 log4j.appender.ivrreportlog.DatePattern='.'yyyy-MM-dd
 log4j.appender.ivrreportlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.ivrreportlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
@@ -89,7 +89,7 @@ log4j.appender.ivrreportlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%
 log4j.logger.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.calllog=INFO, ivrcalls
 log4j.additivity.org.motechproject.mobile.omp.manager.intellivr.IntellIVRBean.calllog=false
 log4j.appender.ivrcalls=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ivrcalls.File=${catalina.base}/logs/ivrcalls.log
+log4j.appender.ivrcalls.File=${catalina.base}/logs/tama-ivrcalls.log
 log4j.appender.ivrcalls.DatePattern='.'yyyy-MM-dd
 log4j.appender.ivrcalls.layout=org.apache.log4j.PatternLayout
 log4j.appender.ivrcalls.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
@@ -98,7 +98,7 @@ log4j.appender.ivrcalls.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss},%m%n
 log4j.logger.org.apache.cxf=ERROR, wslogfile
 log4j.additivity.org.apache.cxf=false
 log4j.appender.wslogfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.wslogfile.File=${catalina.base}/logs/motech-mobile-ws.log
+log4j.appender.wslogfile.File=${catalina.base}/logs/tama-mobile-ws.log
 log4j.appender.wslogfile.DatePattern='.'yyyy-MM-dd
 log4j.appender.wslogfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.wslogfile.layout.ConversionPattern=%d %-5p [%c] %m%n
@@ -107,7 +107,7 @@ log4j.appender.wslogfile.layout.ConversionPattern=%d %-5p [%c] %m%n
 log4j.logger.org.motechproject.mobile.web.OXDFormUploadServlet.mformsraw=DEBUG, mformsrawlog
 log4j.additivity.org.motechproject.mobile.web.OXDFormUploadServlet.mformsraw=false
 log4j.appender.mformsrawlog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.mformsrawlog.File=${catalina.base}/logs/mforms-uploads.log
+log4j.appender.mformsrawlog.File=${catalina.base}/logs/tama-mforms-uploads.log
 log4j.appender.mformsrawlog.DatePattern='.'yyyy-MM-dd
 log4j.appender.mformsrawlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.mformsrawlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %m%n
