--- a/motech-mobile-omi/src/test/resources/log4j.properties
+++ b/motech-mobile-omi/src/test/resources/log4j.properties
@@ -42,7 +42,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=${catalina.base}/logs/motech-mobile.log
+log4j.appender.logfile.File=${catalina.base}/logs/tama-mobile.log
 log4j.appender.logfile.MaxFileSize=512KB
 
 # Keep three backup files.
