--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -78,7 +78,7 @@ hibernate.c3p0.acquire_increment=3
 ##Liquibase Settings
 ##context can be *setup or *update or leave empty for fresh deployment for now
 changeLogFile=classpath:motech-web-main-change-log.xml
-contexts=setup,update
+contexts=setup,update,tama
 
 
 ##Rancard Gateway
