--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.7</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.5</source>
@@ -588,27 +593,27 @@
             <id>ci</id>
             <activation>
                 <file>
-                    <exists>/home/build/ci-server</exists>
+                    <exists>/var/lib/hudson/ci-server</exists>
                 </file>
             </activation>
             <distributionManagement>
                 <repository>
-                    <id>motech-mobile-dist</id>
+                    <id>usm.motech.archiva</id>
                     <name>Motech Releases Repository</name>
-                    <url>file:///home/build/repositories/internal</url>
+		    <url>http://motech.rcg.usm.maine.edu/archiva/repository/internal</url>
                 </repository>
                 <snapshotRepository>
-                    <id>motech-mobile-dist</id>
+                    <id>usm.motech.archiva</id>
                     <name>Motech Snapshots Repository</name>
-                    <url>file:///home/build/repositories/snapshots</url>
+                    <url>http://motech.rcg.usm.maine.edu/archiva/repository/snapshots</url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
     </profiles>
     <scm>
-        <url>https://motech.rcg.usm.maine.edu/redmine/repositories/show/motech-mobile/branches/0.8.X</url>
-        <connection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/branches/0.8.X</connection>
-        <developerConnection>scm:svn:https://motech.rcg.usm.maine.edu/svn/motech-mobile/branches/0.8.X</developerConnection>
+        <url>https://github.com/motech/MOTECH-Mobile</url>
+        <connection>scm:git:ssh://git@github.com/motech/MOTECH-Mobile.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/motech/MOTECH-Mobile.git</developerConnection>
     </scm>
 
 </project>
