--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.0-beta-9</version>
+                    <version>2.0</version>
                     <configuration>
                         <preparationGoals>clean verify -DenableIT=true</preparationGoals>
                     </configuration>
@@ -125,6 +125,11 @@
             </plugins>
         </pluginManagement>
         <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.7</version>
+          </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -588,19 +593,19 @@
             <id>ci</id>
             <activation>
                 <file>
-                    <exists>/home/build/ci-server</exists>
+                    <exists>/var/lib/hudson/ci-server</exists>
                 </file>
             </activation>
             <distributionManagement>
                 <repository>
-                    <id>motech-mobile-dist</id>
+                    <id>usm.motech.archiva</id>
                     <name>Motech Releases Repository</name>
-                    <url>file:///home/build/repositories/internal</url>
+                    <url>http://motech.rcg.usm.maine.edu/archiva/repository/internal</url>
                 </repository>
                 <snapshotRepository>
-                    <id>motech-mobile-dist</id>
+                    <id>usm.motech.archiva</id>
                     <name>Motech Snapshots Repository</name>
-                    <url>file:///home/build/repositories/snapshots</url>
+                    <url>http://motech.rcg.usm.maine.edu/archiva/repository/snapshots</url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
