--- a/pom.xml
+++ b/pom.xml
@@ -272,7 +272,7 @@
             <dependency>
                 <groupId>org.motechproject</groupId>
                 <artifactId>motech-wsapi</artifactId>
-                <version>0.8</version>
+                <version>0.8.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.cxf</groupId>
