Adding the test and prod settings so that we do not need to change the values of motech-settings.properties while deploying

--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -169,6 +169,15 @@
     </dependencies>
 
     <build>
+        <resources>
+		  <resource>
+			<directory>src/main/resources</directory>
+			<filtering>true</filtering>
+		  </resource>
+		</resources>
+		<filters>
+			<filter>${env}.properties</filter>
+		</filters>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -271,5 +280,6 @@
         <netbeans.hint.deploy.server>Tomcat60</netbeans.hint.deploy.server>
         <tomcat.home>${env.CATALINA_HOME}</tomcat.home>
         <web.context>${project.parent.artifactId}</web.context>
+        <env>prod</env>
     </properties>
 </project>
