--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -34,38 +34,13 @@
 #This file contains the settings info of MoTeCH Mobile
 
 ###Hibernate/JDBC Settings
-##HSQL
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.show_sql=false
+hibernate.dialect=${hibernate.dialect}
+hibernate.show_sql=${hibernate.show_sql}
 
-
-
-##HSQL JDBC
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.username=sa
-jdbc.password=
-jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
-
-##Derby
-#hibernate.dialect=org.hibernate.dialect.DerbyDialect
-#hibernate.show_sql=true
-#hibernate.hbm2ddl.auto=create
-
-##Derby JDBC
-#jdbc.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-#jdbc.username=root
-#jdbc.password=admin
-#jdbc.url=jdbc:derby:motechmobiledb;create=true
-
-##MySQL
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#hibernate.show_sql=false
-
-##MySQL JDBC
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.username=motechmobile
-#jdbc.password=mmobilepass
-#jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
+jdbc.driverClassName=${jdbc.driverClassName}
+jdbc.username=${jdbc.username}
+jdbc.password=${jdbc.password}
+jdbc.url=${jdbc.url}
 
 ##Connection
 hibernate.c3p0.max_size=15
