--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.motechproject</groupId>
@@ -26,12 +27,12 @@
             <timezone>0</timezone>
             <email>joseph@dreamoval.com</email>
         </developer>
-	<developer>
-	  <id>rlarubbio</id>
-	  <name>Rob LaRubbio</name>
-	  <timezone>-8</timezone>
-	  <email>rlarubbio@grameenfoundation.org</email>
-	</developer>
+        <developer>
+            <id>rlarubbio</id>
+            <name>Rob LaRubbio</name>
+            <timezone>-8</timezone>
+            <email>rlarubbio@grameenfoundation.org</email>
+        </developer>
     </developers>
 
     <ciManagement>
@@ -128,7 +129,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-	      <version>2.7</version>
+                <version>2.7</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -138,15 +142,15 @@
                     <target>1.5</target>
                 </configuration>
             </plugin>
-	    <plugin>
-	      <groupId>com.mycila.maven-license-plugin</groupId>
-	      <artifactId>maven-license-plugin</artifactId>
-	      <version>1.8.0</version>
-	      <configuration>
-                <header>header.txt</header>
-                <strictCheck>true</strictCheck>
-	      </configuration>
-	    </plugin>
+            <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <version>1.8.0</version>
+                <configuration>
+                    <header>header.txt</header>
+                    <strictCheck>true</strictCheck>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <modules>
@@ -232,7 +236,7 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-               <dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aspects</artifactId>
                 <version>${spring.version}</version>
@@ -354,14 +358,14 @@
                 <version>1.5</version>
             </dependency>
             <dependency>
-            	<groupId>commons-io</groupId>
-            	<artifactId>commons-io</artifactId>
-            	<version>1.4</version>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>1.4</version>
             </dependency>
             <dependency>
-            	<groupId>commons-codec</groupId>
-            	<artifactId>commons-codec</artifactId>
-            	<version>1.4</version>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.4</version>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -531,9 +535,9 @@
                 <version>1.0.7</version>
             </dependency>
             <dependency>
-            	<groupId>smslib</groupId>
-            	<artifactId>smslib-all</artifactId>
-            	<version>3.4.5</version>
+                <groupId>smslib</groupId>
+                <artifactId>smslib-all</artifactId>
+                <version>3.4.5</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -541,17 +545,17 @@
                 <version>1.5.6</version>
             </dependency>
             <dependency>
-            	<groupId>javax.comm</groupId>
-            	<artifactId>comm</artifactId>
-            	<version>2.0</version>
-            	<scope>provided</scope>
+                <groupId>javax.comm</groupId>
+                <artifactId>comm</artifactId>
+                <version>2.0</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-core</artifactId>
                 <version>1.9.5</version>
             </dependency>
-         </dependencies>
+        </dependencies>
     </dependencyManagement>
     
     <properties>
@@ -609,9 +613,9 @@
         </profile>
     </profiles>
     <scm>
-      <url>https://github.com/motech/MOTECH-Mobile</url>
-      <connection>scm:git:ssh://git@github.com/motech/MOTECH-Mobile.git</connection>
-      <developerConnection>scm:git:ssh://git@github.com/motech/MOTECH-Mobile.git</developerConnection>
+        <url>https://github.com/motech/MOTECH-Mobile</url>
+        <connection>scm:git:ssh://git@github.com/motech/MOTECH-Mobile.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/motech/MOTECH-Mobile.git</developerConnection>
     </scm>
 
 </project>
