--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.motechproject</groupId>
     <artifactId>motech-mobile</artifactId>
@@ -160,7 +160,7 @@
         <module>motech-mobile-omi</module>
         <module>motech-mobile-modemgw</module>
         <module>motech-mobile-webapp</module>
-        <!--<module>motech-mobile-wsclient</module>-->        
+        <!--<module>motech-mobile-wsclient</module>-->
     </modules>
     <dependencyManagement>
         <dependencies>
@@ -557,7 +557,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>2.5.6.SEC01</spring.version>
