Migrate from USM archiva to motech nexus

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <repository>
             <id>motech-repo</id>
             <name>Motech Maven Repository</name>
-            <url>http://motech.rcg.usm.maine.edu/archiva/repository/all</url>
+			<url>http://nexus.motechproject.org/content/repositories/all</url>
         </repository>
     </repositories>
 
@@ -82,7 +82,7 @@
         <pluginRepository>
             <id>motech-repo</id>
             <name>Motech Maven Repository</name>
-            <url>http://motech.rcg.usm.maine.edu/archiva/repository/all</url>
+		    <url>http://nexus.motechproject.org/content/repositories/all</url>
             <snapshots>
             </snapshots>
         </pluginRepository>
@@ -598,14 +598,14 @@
             </activation>
             <distributionManagement>
                 <repository>
-                    <id>usm.motech.archiva</id>
+                    <id>motech.nexus</id>
                     <name>Motech Releases Repository</name>
-                    <url>http://motech.rcg.usm.maine.edu/archiva/repository/internal</url>
+                    <url>http://nexus.motechproject.org/content/repositories/releases</url>
                 </repository>
                 <snapshotRepository>
-                    <id>usm.motech.archiva</id>
+                    <id>motech.nexus</id>
                     <name>Motech Snapshots Repository</name>
-                    <url>http://motech.rcg.usm.maine.edu/archiva/repository/snapshots</url>
+                    <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
