--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,18 @@
                     <groupId>org.liquibase</groupId>
                     <artifactId>liquibase-plugin</artifactId>
                     <version>1.9.5.0</version>
+                    <executions>
+                        <execution>
+                            <phase>process-resources</phase>
+                            <configuration>
+                                
+                            </configuration>
+                            <goals>
+                                <goal>update</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -219,11 +231,6 @@
                 <groupId>org.motechproject</groupId>
                 <artifactId>motech-wsapi</artifactId>
                 <version>1.0-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.cxf</groupId>
-                <artifactId>cxf-rt-core</artifactId>
-                <version>${cxf.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.cxf</groupId>
@@ -452,11 +459,6 @@
                 <groupId>commons-collections</groupId>
                 <artifactId>commons-collections</artifactId>
                 <version>3.2</version>
-            </dependency>
-            <dependency>
-                <groupId>hsqldb</groupId>
-                <artifactId>hsqldb</artifactId>
-                <version>1.8.0.10</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
