--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -137,9 +137,9 @@ imp.xmlparser.formTypeTagName=formtype
 imp.xmlparser.formNameTagName=formname
 
 #OXD Setting
-imp.oxd.oxdFormDefsResource1=/oxd-form-defs/NurseDataEntry.xml
-imp.oxd.oxdFormDefsResource2=/oxd-form-defs/NurseQuery.xml
-imp.oxd.oxdFormDefsResource3=/oxd-form-defs/FieldAgentForms.xml
+imp.oxd.oxdFormDefsResource1=/oxd-form-defs/NurseDataEntry
+imp.oxd.oxdFormDefsResource2=/oxd-form-defs/NurseQuery
+imp.oxd.oxdFormDefsResource3=/oxd-form-defs/FieldAgentForms
 imp.oxd.senderField=sender
 imp.oxd.senderExpression=sender\\s*=\\s*\\d+
 imp.oxd.queryExpression=query\\s*=\\s*\\w+
