changing mobile version to 1.0 and WS-API dependency to 0.9

--- a/motech-mobile-omp/src/test/resources/rancard.properties
+++ b/motech-mobile-omp/src/test/resources/rancard.properties
@@ -32,8 +32,8 @@
 #
 
 ##Rancard Gateway
-rancard.gateway.user=
-rancard.gateway.password=
+rancard.gateway.user=drmgrameen
+rancard.gateway.password=dr3mgr3
 rancard.gateway.sentStatus=SENT
 rancard.gateway.okStatus=SENT
 rancard.gateway.senderId=MoTeCH
