--- a/motech-mobile-webapp/prod.properties
+++ b/motech-mobile-webapp/prod.properties
@@ -2,6 +2,6 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=false
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.username=root
-jdbc.password=openmrs
+jdbc.username=openmrs
+jdbc.password=password
 jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
