--- a/motech-mobile-webapp/prod.properties
+++ b/motech-mobile-webapp/prod.properties
@@ -1,7 +1,17 @@
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.show_sql=false
+
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.username=root
+#jdbc.password=openmrs
+#jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
+
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.show_sql=false
 
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.username=root
-jdbc.password=openmrs
-jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
+##Connection
+jdbc.driverClassName=org.hsqldb.jdbcDriver
+jdbc.username=sa
+jdbc.password=
+jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
+
